Rename parent / child as from and to, plus include relationship tag
